# crabai

./: .gitignore  Cargo.toml  README.md  build.rs  crabai.desktop  rustops_db.json
src/: app.rs  errors.rs  main.rs  ollama.rs  storage.rs  system_stats.rs  utils.rs
src/ui/: chat.rs  donations.rs  footer.rs  messages.rs  mod.rs  modals.rs  settings.rs  sidebar.rs  splash.rs  terms.rs  update_alert.rs
